@@ -3,6 +3,8 @@ package devops.metadata.syncer.infrastructure.inbound.cli.helper;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.ApplicationArguments;
 
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -15,13 +17,11 @@ class ApplicationArgumentsHelperTest {
     void getArg_shouldReturnFirstValue_whenOptionExistsWithValues() {
         // Arrange
         ApplicationArguments args = new ApplicationArgumentsStub(
-                Map.of(
-                        "name", List.of("Alice", "Bob")
-                )
+                Map.of("name", List.of("Alice", "Bob"))
         );
-        ApplicationArgumentsHelper helper = ApplicationArgumentsHelper.of(args);
+        ApplicationArgumentsHelper sut = ApplicationArgumentsHelper.of(args);
         // Act
-        Optional<String> result = helper.getArg("name");
+        Optional<String> result = sut.getArg("name");
         // Assert
         assertThat(result).contains("Alice");
     }
@@ -30,13 +30,11 @@ class ApplicationArgumentsHelperTest {
     void getArg_shouldReturnEmpty_whenOptionDoesNotExist() {
         // Arrange
         ApplicationArguments args = new ApplicationArgumentsStub(
-                Map.of(
-                        "other", List.of("value")
-                )
+                Map.of("other", List.of("value"))
         );
-        ApplicationArgumentsHelper helper = ApplicationArgumentsHelper.of(args);
+        ApplicationArgumentsHelper sut = ApplicationArgumentsHelper.of(args);
         // Act
-        Optional<String> result = helper.getArg("name");
+        Optional<String> result = sut.getArg("name");
         // Assert
         assertThat(result).isEmpty();
     }
@@ -45,63 +43,37 @@ class ApplicationArgumentsHelperTest {
     void getArg_shouldReturnEmpty_whenOptionExistsButValuesIsEmpty() {
         // Arrange
         ApplicationArguments args = new ApplicationArgumentsStub(
-                Map.of(
-                        "name", List.of()
-                )
+                Map.of("name", List.of())
         );
-        ApplicationArgumentsHelper helper = ApplicationArgumentsHelper.of(args);
+        ApplicationArgumentsHelper sut = ApplicationArgumentsHelper.of(args);
         // Act
-        Optional<String> result = helper.getArg("name");
+        Optional<String> result = sut.getArg("name");
         // Assert
         assertThat(result).isEmpty();
     }
 
     @Test
-    void getArgs_shouldReturnAllValues_whenOptionExistsWithValues() {
+    void getArg_shouldReturnEmpty_whenOptionExistsButValuesIsNull() {
         // Arrange
-        ApplicationArguments args = new ApplicationArgumentsStub(
-                Map.of(
-                        "name", List.of("Alice", "Bob")
-                )
-        );
-        ApplicationArgumentsHelper helper = ApplicationArgumentsHelper.of(args);
+        Map<String, List<String>> options = new HashMap<>();
+        options.put("name", null);
+        ApplicationArguments args = new ApplicationArgumentsStub(options);
+        ApplicationArgumentsHelper sut = ApplicationArgumentsHelper.of(args);
         // Act
-        Optional<List<String>> result = helper.getArgs("name");
-        // Assert
-        assertThat(result).isPresent();
-        assertThat(result.get()).containsExactly("Alice", "Bob");
-    }
-
-    @Test
-    void getArgs_shouldReturnEmpty_whenOptionDoesNotExist() {
-        // Arrange
-        ApplicationArguments args = new ApplicationArgumentsStub(
-                Map.of(
-                        "other", List.of("value")
-                )
-        );
-        ApplicationArgumentsHelper helper = ApplicationArgumentsHelper.of(args);
-
-        // Act
-        Optional<List<String>> result = helper.getArgs("name");
-
+        Optional<String> result = sut.getArg("name");
         // Assert
         assertThat(result).isEmpty();
     }
 
     @Test
-    void getArgs_shouldReturnEmpty_whenOptionExistsButValuesIsEmpty() {
+    void getArg_shouldReturnEmpty_whenFirstValueIsNull() {
         // Arrange
         ApplicationArguments args = new ApplicationArgumentsStub(
-                Map.of(
-                        "name", List.of()
-                )
+                Map.of("name", Arrays.asList(null, "Bob"))
         );
-        ApplicationArgumentsHelper helper = ApplicationArgumentsHelper.of(args);
-
+        ApplicationArgumentsHelper sut = ApplicationArgumentsHelper.of(args);
         // Act
-        Optional<List<String>> result = helper.getArgs("name");
-
+        Optional<String> result = sut.getArg("name");
         // Assert
         assertThat(result).isEmpty();
     }
